--- a/foundations/intro-to-css/03-grouping-selectors/index.html
+++ b/foundations/intro-to-css/03-grouping-selectors/index.html
@@ -1,6 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <style>
+      .me {
+        background-color: black;
+        color: white;
+      }
+
+      .no {
+        background-color: yellow;
+      }
+
+      .me.no {
+        font-size: 28px;
+        font-family: "Helvetica", "Times New Roman", sans-serif;
+      }
+    </style>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +23,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <button>Click Me!</button>
-    <button>No, Click Me!</button>
+    <button class="me">Click Me!</button>
+    <button class="no">No, Click Me!</button>
   </body>
 </html>
